优化netty代码，升级版本